--- a/windows/VentanaAgregarProducto.xaml
+++ b/windows/VentanaAgregarProducto.xaml
@@ -6,7 +6,12 @@
         xmlns:local="clr-namespace:SistemaDeInventarioASOEM.windows"
         mc:Ignorable="d"
         Title="VentanaAgregarProducto" Height="450" Width="800">
+    <Window.Resources>
+        
+        
+    </Window.Resources>
     <Grid>
         
+
     </Grid>
 </Window>
