--- a/windows/VentanaAdministrarPrestamo.xaml
+++ b/windows/VentanaAdministrarPrestamo.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="SistemaDeInventarioASOEM.windows.VentanaAdministrarPrestamo"
+        Icon="/ncs/logo.ico"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -26,10 +27,10 @@
                     Background="#27AE60" Foreground="White" FontWeight="Bold"
                     Width="140" Height="40" Margin="5"/>
 
-            <Button Content="Eliminar / Devolver" 
-                    Command="{Binding EliminarPrestamoCommand}"
-                    Background="#C0392B" Foreground="White" FontWeight="Bold"
-                    Width="140" Height="40" Margin="5"/>
+            <Button Content="Devolver" 
+        Command="{Binding DevolverPrestamoCommand}" 
+        Background="#C0392B" Foreground="White" FontWeight="Bold"
+        Width="140" Height="40" Margin="5"/>
         </StackPanel>
 
         <DataGrid Grid.Row="1" 
@@ -43,15 +44,21 @@
                   GridLinesVisibility="Horizontal">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40"/>
 
-                <DataGridTextColumn Header="Solicitante" Binding="{Binding persona}" Width="150" FontWeight="SemiBold"/>
+                <DataGridTextColumn Header="Producto" Binding="{Binding NombreProducto}" Width="150" FontWeight="Bold"/>
 
-                <DataGridTextColumn Header="Área" Binding="{Binding area}" Width="120"/>
+                <DataGridTextColumn Header="Empleado" Binding="{Binding persona}" Width="120"/>
 
-                <DataGridTextColumn Header="Fecha Inicio" Binding="{Binding FechaInicio, StringFormat=dd/MM/yyyy}" Width="100"/>
+                <DataGridTextColumn Header="Área" Binding="{Binding area}" Width="100"/>
 
-                <DataGridTextColumn Header="Detalle / Producto" Binding="{Binding description}" Width="*"/>
+                <DataGridTextColumn Header="Inicio" Binding="{Binding FechaInicioTexto}" Width="110"/>
+
+                <DataGridTextColumn Header="Devolución" Binding="{Binding FechaDevolucionTexto}" Width="110"/>
+
+                <DataGridTextColumn Header="Estado" Binding="{Binding EstadoTexto}" Width="80"/>
+
+                <DataGridTextColumn Header="Observación" Binding="{Binding description}" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
