--- a/windows/VentanaAgregarPrestamo.xaml
+++ b/windows/VentanaAgregarPrestamo.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="SistemaDeInventarioASOEM.windows.VentanaAgregarPrestamo"
+        Icon="/ncs/logo.ico"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Registrar Nuevo Préstamo" Height="480" Width="400"
